# lunch_and_learn_integration_tests_pytest

./: .flake8  .pre-commit-config.yaml  .pylintrc  Integration tests using pytest-docker.pptx  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/lunch_and_learn/: migrate_replicator_table_to_delta.py  repman_communicator.py  s3_communicator.py  s3_utils.py
src/lunch_and_learn/models/: replicator.py
src/test_package/: __main__.py
tests/: test_hello_world.py
tests/integration/: conftest.py  test_migrate_replicator_table_to_delta.py  test_repman_communicator.py
tests/integration/data/: sample_replicator.py
tests/integration/docker_environment/: docker-compose-presto.yml  docker-compose.yml
tests/integration/docker_environment/mysql/: databases.sql
tests/integration/docker_environment/presto/: Dockerfile
tests/integration/docker_environment/presto/etc/catalog/: replicatormanager.properties
tests/integration/integration_utils/: mysql.py  presto.py
tests/unit/: conftest.py  test_s3_communicator.py  test_s3_utils.py
