[tool.poetry]
name = "lunch_and_learn"
version = "0.1.0"
description = "Tutorial for Django"
authors = ["Muhammad Naqeeb Asif <muhammadnaqeebasif@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.23.5"
boto3-stubs = {extras = ["s3"], version = "^1.23.5"}
SQLAlchemy = "^1.4.36"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-cov = "^2.12.1"
flake8 = "^3.9.2"
bandit = "1.7.2"
pylint = "^2.9.5"
mypy = "^0.910"
safety = "^1.10.3"
flake8-annotations = "^2.6.2"
flake8-black = "^0.2.3"
flake8-use-fstring = "^1.1"
wemake-python-styleguide = "^0.16.0"
pytest-docker = "^0.12.0"
pytest-mock = "^3.7.0"
black = {version = "^22.3.0", allow-prereleases = true}
moto = "^3.1.9"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["src/lunch_and_learn"]
omit = ["*/**__init__.py", "src/lunch_and_learn/__main__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
line-length = 120

[[tool.mypy.overrides]]
module = [
    "moto.*"
]
ignore_missing_imports = true
